[build-system]
requires = ["flit_core >=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "imgCIF_creator"
authors = [{name = "Thomas Kluyver", email = "thomas.kluyver@xfel.eu"}]
readme = "README.md"
dependencies = [
    "dxtbx >=3.27",  # dxtbx is not available from PyPI - need to install through conda
    "h5py",
    "numpy",
    "prompt_toolkit",
    "requests",
    "scipy",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/COMCIFS/imgCIF_Creator"

[project.scripts]
imgcif-creator = "imgCIF_creator.tui:main"
make-cbf = "imgCIF_creator.make_cbf_cli:main"
